v1.1.0/modules/schema/pages/class/PerLengthDCLineParameter.adoc
= `PerLengthDCLineParameter`
:toclevels: 4


+++Common type for per-length electrical catalogues describing DC line parameters.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PerLengthDCLineParameter`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PerLengthLineParameter.adoc[`PerLengthLineParameter`]
*** *`PerLengthDCLineParameter`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<DCLineSegments,`DCLineSegments`>>
//| [[slots_table.DCLineSegments]]<<DCLineSegments,`DCLineSegments`>>
| 0..* +
xref::class/DCLineSegment.adoc[`DCLineSegment`]
| +++All line segments described by this set of per-length parameters.+++
| _n/a_

| <<capacitance,`capacitance`>>
//| [[slots_table.capacitance]]<<capacitance,`capacitance`>>
| 0..1 +
xref::class/CapacitancePerLength.adoc[`CapacitancePerLength`]
| +++Capacitance per unit of length of the DC line segment; significant for cables only.+++
| _n/a_

| <<inductance,`inductance`>>
//| [[slots_table.inductance]]<<inductance,`inductance`>>
| 0..1 +
xref::class/InductancePerLength.adoc[`InductancePerLength`]
| +++Inductance per unit of length of the DC line segment.+++
| _n/a_

| <<resistance,`resistance`>>
//| [[slots_table.resistance]]<<resistance,`resistance`>>
| 0..1 +
xref::class/ResistancePerLength.adoc[`ResistancePerLength`]
| +++Resistance per length of the DC line segment.+++
| _n/a_

| <<WireAssemblyInfo,`WireAssemblyInfo`>>
//| [[slots_table.WireAssemblyInfo]]<<WireAssemblyInfo,`WireAssemblyInfo`>>
| 0..1 +
xref::class/WireAssemblyInfo.adoc[`WireAssemblyInfo`]
| _n/a_
| xref::class/PerLengthLineParameter.adoc[`PerLengthLineParameter`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#capacitance]
=== `capacitance`
+++Capacitance per unit of length of the DC line segment; significant for cables only.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthDCLineParameter.capacitance`
| Cardinality
| 0..1
| Type
| xref::class/CapacitancePerLength.adoc[`CapacitancePerLength`]


|===

////
[.text-left]
--
<<slots_table.capacitance,&#10548;>>
--
////


//[discrete]
[#DCLineSegments]
=== `DCLineSegments`
+++All line segments described by this set of per-length parameters.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthDCLineParameter.DCLineSegments`
| Cardinality
| 0..*
| Type
| xref::class/DCLineSegment.adoc[`DCLineSegment`]


|===

////
[.text-left]
--
<<slots_table.DCLineSegments,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#inductance]
=== `inductance`
+++Inductance per unit of length of the DC line segment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthDCLineParameter.inductance`
| Cardinality
| 0..1
| Type
| xref::class/InductancePerLength.adoc[`InductancePerLength`]


|===

////
[.text-left]
--
<<slots_table.inductance,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#resistance]
=== `resistance`
+++Resistance per length of the DC line segment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthDCLineParameter.resistance`
| Cardinality
| 0..1
| Type
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]


|===

////
[.text-left]
--
<<slots_table.resistance,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#WireAssemblyInfo]
=== `WireAssemblyInfo`



[cols="h,4",width=65%]
|===
| URI
| `cim:PerLengthLineParameter.WireAssemblyInfo`
| Cardinality
| 0..1
| Type
| xref::class/WireAssemblyInfo.adoc[`WireAssemblyInfo`]

| Inherited from
| xref::class/PerLengthLineParameter.adoc[`PerLengthLineParameter`]


|===

////
[.text-left]
--
<<slots_table.WireAssemblyInfo,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/DCLineSegment.adoc[`DCLineSegment`] | xref::class/DCLineSegment.adoc#PerLengthParameter[`PerLengthParameter`]


|===

